--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
 <head>
     <link rel="stylesheet" href="./styles.css">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css" integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous"> -->
+
     <script>
         // 위치1번.. DOM 요소를 접근할 일이 없고 가장 바르게 실행하고 싶은 경우에 위치
         // 위치 1,2,3번은 https://sub0709.tistory.com/73을 참고하여 작성하였음.
@@ -24,20 +26,20 @@
             <li><a href="articles/foreign.html">해외</a></li>
         </ol>
     </nav>
-    <section id="hottopic">
-        <article id="news1">
-            <h1>Amazon tells employees to remove TikTok from their devices immediately</h1>
-            <p>Amazon has instructed its employees to remove the short-video app TikTok from their devices immediately, according to a person familiar with the matter.</p>
-            <p>In an email sent to employees Friday morning and obtained by CNN, Amazon (AMZN) said that due to "security risks, the TikTok app is no longer permitted on mobile devices that access Amazon email."</p>
-            <p>Accessing TikTok from company laptops is still permitted, the email said, but mobile devices will be cut off from Amazon email unless the app is removed.</p>
-        </article>
-        <article id="news2">
-            <h1>Amazon tells employees to remove TikTok from their devices immediately</h1>
-            <p>Amazon has instructed its employees to remove the short-video app TikTok from their devices immediately, according to a person familiar with the matter.</p>
-            <p>In an email sent to employees Friday morning and obtained by CNN, Amazon (AMZN) said that due to "security risks, the TikTok app is no longer permitted on mobile devices that access Amazon email."</p>
-            <p>Accessing TikTok from company laptops is still permitted, the email said, but mobile devices will be cut off from Amazon email unless the app is removed.</p>
-        </article>
-    </section>
+    
+    <article id="news1">
+        <h2>Amazon tells employees to remove TikTok from their devices immediately</h2>
+        <p>Amazon has instructed its employees to remove the short-video app TikTok from their devices immediately, according to a person familiar with the matter.</p>
+        <p>In an email sent to employees Friday morning and obtained by CNN, Amazon (AMZN) said that due to "security risks, the TikTok app is no longer permitted on mobile devices that access Amazon email."</p>
+        <p>Accessing TikTok from company laptops is still permitted, the email said, but mobile devices will be cut off from Amazon email unless the app is removed.</p>
+    </article>
+    <article id="news2">
+        <h2>222Amazon tells employees to remove TikTok from their devices immediately</h2>
+        <p>Amazon has instructed its employees to remove the short-video app TikTok from their devices immediately, according to a person familiar with the matter.</p>
+        <p>In an email sent to employees Friday morning and obtained by CNN, Amazon (AMZN) said that due to "security risks, the TikTok app is no longer permitted on mobile devices that access Amazon email."</p>
+        <p>Accessing TikTok from company laptops is still permitted, the email said, but mobile devices will be cut off from Amazon email unless the app is removed.</p>
+    </article>
+    
 
     <aside>
         <!-- 부차적인 내용을 담는 태그, article안쪽이나 바깥등 근처에있어야함 -->
