--- a/main.html
+++ b/main.html
@@ -20,11 +20,11 @@
 <body>
     <header><h1>NEWS</h1></header>
     <nav>
-        <ol>
+        <ul> <!--unordered list, 순서있는건 ordered list-->
             <li>정치</li>
             <li>연예</li>
             <li><a href="articles/foreign.html">해외</a></li>
-        </ol>
+        </ul>
     </nav>
     
     <article id="news1">
