--- a/login.html
+++ b/login.html
@@ -1,11 +1,12 @@
+<!-- github.com/MrLolok/Login-Register-Light-Template 참고 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./styles.css">
-    
+    <link rel="stylesheet" href="./login.css">
+    <title>Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome</title>
+    
     </head>
 <body >
     <h1>Login</h1>
