--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
             <i class="material-icons lock">lock</i> Login
         </div>
 
-        <form>
+        <form id="loginForm" name="loginForm" action="./main.html" onsubmit="return submitForm(this)">
             <div class="input">
                 <div class="input-addon">
                     <i class="material-icons">face</i>
@@ -43,20 +43,20 @@
                 <span style="color: #757575">Remember Me</span>
             </div>
 
-            <!-- <input type="submit" value="Log In" /> -->
-            <input type="button" onclick="login()" id="loginButton" value="Log In" />
+            <input type="submit" value="Sign in" />
+            <!-- <input type="button" onclick="login()" id="loginButton" value="Log In" /> -->
         </form>
 
         <div class="forgot-password">
             <a href="#">Forgot your password?</a>
         </div>
-        <div class="privacy">
+        <!-- <div class="privacy">
             <a href="#">Privacy Policy</a>
-        </div>
+        </div> -->
 
         <div class="register">
             <span style="color: #657575">Don't have an account yet?</span>
-            <a href="#"><button id="register-link">Register here</button></a>
+            <a href="#"><button id="register-link">Sign up</button></a>
         </div>
     </div>
     <script type="text/javascript" src="login.js"></script>
